# QGoImageCompare

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  GOFIGURE2CPack.cmake  GOFIGURE2CPackOptions.cmake.in  GOFIGURE2Uninstall.cmake.in  License.txt  ReadMe.txt  UseGoFigure2.cmake.in
CMake/: CTestCustom.cmake.in  FindGoFigure2.cmake  FindMySQL.cmake  GoFigure2Valgrind.supp  InstallSupportLibraries.cmake
Code/: CMakeLists.txt  GoFigureGlobalDefinition.h
Code/ExternalCode/: CMakeLists.txt
Code/ExternalCode/MegaVTK/: CMakeLists.txt  MegaVTK2Configure.h.in
Code/ExternalCode/MegaVTK/vtkItk/: CMakeLists.txt  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.txx  itkVTKImageToImageFilter.h  itkVTKImageToImageFilter.txx  vtkitkAdaptor.h
Code/ExternalCode/MegaVTK/vtkRenderingAddOn/: CMakeLists.txt  vtkFillImageWithPolyData.cxx  vtkFillImageWithPolyData.h  vtkImage3DCroppingBoxCallback.cxx  vtkImage3DCroppingBoxCallback.h  vtkImage3DImagePlaneCallback.cxx  vtkImage3DImagePlaneCallback.h  vtkImageBlendWithMask.cxx  vtkImageBlendWithMask.h  vtkInteractorStyleImage2D.cxx  vtkInteractorStyleImage2D.h  vtkInteractorStyleImage3D.cxx  vtkInteractorStyleImage3D.h  vtkLookupTableManager.cxx  vtkLookupTableManager.h  vtkOrientationAnnotation.cxx  vtkOrientationAnnotation.h  vtkOrientedBoxWidget.cxx  vtkOrientedBoxWidget.h  vtkPolylineDecimation.cxx  vtkPolylineDecimation.h  vtkViewImage.cxx  vtkViewImage.h  vtkViewImage2D.cxx  vtkViewImage2D.h  vtkViewImage2DCollection.cxx  vtkViewImage2DCollection.h  vtkViewImage2DCollectionCommand.cxx  vtkViewImage2DCollectionCommand.h  vtkViewImage2DCommand.cxx  vtkViewImage2DCommand.h  vtkViewImage3D.cxx  vtkViewImage3D.h  vtkViewImage3DCommand.cxx  vtkViewImage3DCommand.h
Code/ExternalCode/MegaVTK/vtkRenderingAddOn/lut/: Asymmetry.h  Flow.h  GEColor.h  HotMetal.h  LONI.h  LONI2.h  Spectrum.h
Code/GDBPretty/: CMakeLists.txt  QImageReceiver.cxx  QImageReceiver.h  QRemoteControl.cxx  QRemoteControl.h  StreamingImageImporter.cxx  StreamingImageImporter.h  icp.cpp  icpGuiMain.cxx  icpmodule.cpp  icpmodule.cxx  icpmodule.cxx.in
Code/GUI/lib/: CMakeLists.txt  QGoGUILibConfigure.h.in  QGoImageInfo.cxx  QGoImageInfo.h  QGoImageView.cxx  QGoImageView.h  QGoImageView2D.cxx  QGoImageView2D.h  QGoImageView3D.cxx  QGoImageView3D.h  QGoLUTDialog.cxx  QGoLUTDialog.h  QGoLsmToMegaExportDialog.cxx  QGoSynchronizedView.cxx  QGoSynchronizedView.h  QGoSynchronizedView2D.cxx  QGoSynchronizedView2D.h  QGoSynchronizedView2DCallbacks.cxx  QGoSynchronizedView2DCallbacks.h  QGoSynchronizedView3D.cxx  QGoSynchronizedView3D.h  QGoSynchronizedView3DCallbacks.cxx  QGoSynchronizedView3DCallbacks.h  QGoSynchronizedViewMainWindow.cxx  QGoSynchronizedViewMainWindow.h  QGoSynchronizedViewManager.cxx  QGoSynchronizedViewManager.h  QNameDescriptionInputDialog.h  QSplitterChild.cxx  QSplitterChild.h  QTextEditChild.cxx  QTextEditChild.h  SnapshotHelper.cxx  SnapshotHelper.h  qtcolorcombobox.cxx  qtcolorcombobox.h  vtkImageWriterHelper.h
Code/GUI/lib/Resources/: BookmarkDialog.ui  LsmToMegaExportDialog.ui  ManualSegmentationDockWidget.ui  ManualSegmentationSettingsDlg.ui  NavigationDockWidget.ui  NewVideoRecorderDockWidget.ui  OneClickSegmentationDockWidget.ui  QGoPluginInformationWidget.ui  QGoPrintDatabase.ui  QGoSynchronizedView.ui  QGoTraceManualEditingWidget.ui  QNameDescriptionInputDialog.ui
Code/IO/: CMakeLists.txt  ConvertToStringHelper.h  vtkImageWriterHelper.h
Documentation/: CMakeLists.txt
Documentation/Article/: ArticleExample.dvi  Readme.txt
Documentation/Article/Code/: AntoBib.bib  Article.tex  ArticleExample.tex  Makefile
Documentation/Article/Code/settings/: TexCodeSet.tex
Documentation/Article/KitwareSource/: KitwareSource-Finalizing.doc  KitwareSourcePaper.odt
Documentation/Doxygen/: CMakeLists.txt  Doxyfile.txt.in  MainPage.dox  qt.tag
Documentation/Doxygen/Images/: ReadMe.txt
Examples/: CMakeLists.txt
Examples/GUI/: CMakeLists.txt
Examples/GUI/lib/: CMakeLists.txt  QGoImageInfoTest.cxx  compareexample.cxx  comparepipelineexample.cxx  pipeitkexample.cxx  pipevtkexample.cxx  qgocompareexample.cxx  qgoimageview2d.cxx  qgoimageview3d.cxx  qgolutdialog.cxx  qgosynchronizedview2dtest.cxx  qgosynchronizedview3dtest.cxx  qgosynchronizedviewguitest.cxx  qgosynchronizedviewmanagertest.cxx
Licenses/: BioimageXDCopyright.txt  Copyright.txt  CopyrightCrystal.txt  CopyrightNuvola.txt  CopyrightOxygen.txt  FFmpegCopyright.txt  ITKCopyright.txt  VTKCopyright.txt  vtkINRIA3DCopyright.txt
Main/: CMakeLists.txt  comparegui.cxx  comparesimple.cxx  pipeExample.cxx
Resources/: axes.qrc  myapp.icns
Testing/: CMakeLists.txt
Testing/Code/: CMakeLists.txt
Testing/Code/GDBPretty/: CMakeLists.txt  gdb_test_script.gdb.in  pretty-executable-gdb.py  pretty-executable.cpp
Testing/Code/GUI/: CMakeLists.txt  pipeitktest.cxx  pipevtktest.cxx  qgoimageview2d.cxx  qgoimageview3d.cxx  qgolutdialog.cxx  qgosynchronizedview2dtest.cxx  qgosynchronizedview3dtest.cxx  qgosynchronizedviewmanagertest.cxx
Testing/Data/: Circle3D.mhd  Circle3D.raw  Circleblur3D.mha  contour.vtk  sphere.vtk
