ADD_EXECUTABLE( comparegui
  comparegui.cxx 
  )

TARGET_LINK_LIBRARIES( comparegui
  QGoGui
  )
  
INSTALL( TARGETS comparegui
   RUNTIME DESTINATION ${GOFIGURE2_INSTALL_BIN_DIR} COMPONENT Runtime
   BUNDLE  DESTINATION ${GOFIGURE2_INSTALL_BUNDLE_DIR} COMPONENT Runtime
   ARCHIVE DESTINATION ${GOFIGURE2_INSTALL_LIB_DIR} COMPONENT Libraries
   LIBRARY DESTINATION ${GOFIGURE2_INSTALL_LIB_DIR} COMPONENT Libraries   
   )

  
