SET( APP_LIST
  comparegui
  comparesimple
  pipeExample
)

FOREACH( var ${APP_LIST} )
  ADD_EXECUTABLE( ${var} 
    ${var}.cxx 
    )

  TARGET_LINK_LIBRARIES( ${var} 
    QGoGui
    )
  
  INSTALL( TARGETS ${var}
    RUNTIME DESTINATION ${GOFIGURE2_INSTALL_BIN_DIR} COMPONENT Runtime
    BUNDLE  DESTINATION ${GOFIGURE2_INSTALL_BUNDLE_DIR} COMPONENT Runtime
    ARCHIVE DESTINATION ${GOFIGURE2_INSTALL_LIB_DIR} COMPONENT Libraries
    LIBRARY DESTINATION ${GOFIGURE2_INSTALL_LIB_DIR} COMPONENT Libraries   
    )

ENDFOREACH( var ${APP_LIST} )
